# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  fix.sh  format.sh  frontend-changes.md  lint.sh  pyproject.toml
backend/: IMPLEMENTATION_SUMMARY.md  ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_diagnostic.py
frontend/: index.html  script.js  style.css
